--- a/www/index.html
+++ b/www/index.html
@@ -5,41 +5,27 @@
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000">
-<h1>Default project home page </h1>
-<p>Congratulations on your new java.net project! </p>
-<p>This page is the home page for your new project. This content is appearing 
-  because you have selected the option <b>Use project index.html</b>. To edit 
-  the information displayed on this page, just use CVS to check out your project's 
-  CVS repository and edit index.html in directory www. You can get more information 
-  on how to set-up your local CVS client, click on <b>Version Control</b> on the 
-  left nav bar. </p>
-<p>If you don't want to use CVS to manage your home page, click on the <b>Edit 
-  project</b> link on this page and unclick the option <b>Use project index.html</b>. 
-  Your project home page contents will be generated from the <b>Edit project</b> 
-  field <b>Description</b>. Edit the text on that field to change your home page 
-  contents. Click on <b>Submit changes</b> to save your edits. </p>
-<p>If you are looking for <a href="https://java-net.dev.java.net/ProjectPages.html#templates">sample 
-  home page templates</a>, check out the <a href="https://java-net.dev.java.net/ProjectPages.html">java.net 
-  Project Starter Kit</a>. Copy either of the templates into your project's html 
-  to get started on your project's home page. </p>
-<p>You can find lots of helpful information in the Starter Kit to get your project 
-  started. Some of the things you will find in there include:</p>
-<ul>
-  <li>Hints on how to <a href="https://java-net.dev.java.net/ProjectPages.html#pages">set-up 
-    your project's</a> home page</li>
-  <li>Ideas on how to <a href="https://java-net.dev.java.net/ProjectPages.html#publicity">publicize 
-    your project</a> including RSS feeds</li>
-  <li>Hints on <a href="https://java-net.dev.java.net/pagedesign.html">project 
-    page HTML</a></li>
-  <li>Setting up project <a href="https://java-net.dev.java.net/ProjectPages.html#wiki">wiki 
-    pages</a></li>
-  <li>And places to go if <a href="https://java-net.dev.java.net/ProjectPages.html#feedback">you 
-    have questions</a>.</li>
-</ul>
-<p>Remember that you will attract more new members and your project team will 
-  work more effectively if you, as the project owner, supply sufficient information 
-  about your project for visitors to your project space. Good luck with your new 
-  project! </p>
+<h1><font face="Verdana">JIDE Common Layer </font> </h1>
+<p><font face="Verdana">JIDE Common Layer is Swing component library built on 
+top of Java/Swing. It is also the foundation of other component products from 
+JIDE. This project has over 30 Swing components and over 100k lines of code. It 
+greatly enhanced the default component set provided by Swing and allow 
+developers to focus on business logic layer instead of making components.</font></p>
+<p><font face="Verdana">JIDE Common Layer was originally developed by JIDE 
+Software developers as a foundation in order to build other more advanced 
+components. In April of 2007, JIDE Software decided to open source this common 
+layer so that more and more developers can leverage them instead of wasting time 
+building them again. </font> </p>
+<p><font face="Verdana">You can run a demo of all components from JIDE Common 
+Layer from <a href="http://www.jidesoft.com/products/download.htm">here</a>. The 
+first webstart link contains the demos for all components in JIDE Common Layer 
+as well as the demos for all other JIDE components.</font></p>
+<p align="left"><font face="Verdana">JIDE Common Layer is dual-licensed. The two 
+licenses are <a href="http://www.gnu.org/licenses/gpl.txt">GPLv2</a> with
+<a href="http://www.gnu.org/software/classpath/license.html">classpath exception</a> 
+and free <a href="http://www.jidesoft.com/purchase/EULA.htm">commercial license</a>. 
+Please refer to LICENSE file under Subversion for more information about the 
+license.</font></p>
 </body>
 </html>
 
